# dysy

./: Cargo.toml  README.md
src/: app.rs  attractors.rs  lib.rs  main.rs  state.rs  util.rs
src/attractors/: attractor.rs  clifford.rs  custom.rs  double_pendulum.rs  duffing.rs  lorentz.rs  polar.rs  quadratic.rs  symmetric.rs  trigonometric.rs
