[package]
name = "dysy"
version = "0.0.4"
authors = ["taka8 <taka87874k4@gmail.com>"]
edition = "2021"


[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.4"
num-complex = "0.4"
image = { version = "0.25.1", features = ["rayon"] }
rand = "0.8.5"
rfd = "0.14"
lieval = { version = "0.2.4", features = ["fxhash"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"


[profile.release]
opt-level = 3
strip = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3
